<resources>
    <string name="app_name">AndroidNote</string>

    <string name="editor_title">Editor</string>
    <string name="list_title">List of Notes</string>

    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_list">List of all notes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new_note">New note</string>
    <string name="menu_options">Options</string>

    <string name="sort_created_time">Sort by created time</string>
    <string name="sort_modified_time">Sort by modified time</string>
    <string name="sort_title">Sort by title</string>
    <string name="sort_remind">Sort by remind data</string>

    <string name="title_capacity">%d/%d</string>
    <string name="note_create_time">create: %s</string>
    <string name="note_modify_time">modify: %s</string>
    <!-- Toolbar -->
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- Preferences -->
    <string name="pref_high_quality_key">pref_high_quality</string>
    <string name="pref_high_quality_title">Enable High Quality Recording</string>
    <string name="pref_high_quality_desc">Record in CD Quality</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>

    <string name="shortcut_search_disable">Search Unavailable</string>
    <string name="shortcut_search_long">Search Note</string>
    <string name="shortcut_search_short">Search Note</string>
    <string name="shortcut_new_disable">New Unavailable</string>
    <string name="shortcut_new_long">New Note</string>
    <string name="shortcut_new_short">New Note</string>
    <string name="group_all_notes">All notes</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="export">Export</string>
    <string name="set_group">set group</string>
    <string name="groups">Groups</string>
    <string name="new_group">new group</string>
    <string name="remove_group">remove group</string>
    <string name="manage_groups">manage groups</string>
    <string name="remove_from_current_group">remove from current group</string>
    <string name="markdown">Markdown</string>
</resources>
