<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/baseline_search_white_48dp"
        android:shortcutDisabledMessage="@string/shortcut_search_disable"
        android:shortcutId="shortcut_id_search"
        android:shortcutLongLabel="@string/shortcut_search_long"
        android:shortcutShortLabel="@string/shortcut_search_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.se.npe.androidnote.SplashActivity"
            android:targetPackage="com.se.npe.androidnote">
            <extra
                android:name="SEARCH"
                android:value="" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/baseline_add_white_48dp"
        android:shortcutDisabledMessage="@string/shortcut_new_disable"
        android:shortcutId="shortcut_id_new"
        android:shortcutLongLabel="@string/shortcut_new_long"
        android:shortcutShortLabel="@string/shortcut_new_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.se.npe.androidnote.SplashActivity"
            android:targetPackage="com.se.npe.androidnote">
            <extra
                android:name="NEW"
                android:value="" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>